kubernetes/apps/gdd-plex/fileflows/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fileflows
  annotations:
    tailscale.com/proxy-group: ts-ingress
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Media Management"
    gethomepage.dev/name: FileFlows
    gethomepage.dev/icon: fileflows.svg
    gethomepage.dev/description: "Tailscale only | Media processing"
    gethomepage.dev/widget.type: fileflows
    gethomepage.dev/widget.url: "http://fileflows.gdd-plex.svc:5000"
spec:
  ingressClassName: tailscale
  rules:
    - host: fileflows.barn-walleye.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fileflows
                port:
                  number: 5000
  tls:
    - hosts:
        - fileflows.barn-walleye.ts.net
